# RVV-cycle-accurate-simulator

./: CMakeLists.txt  README.md  build.sh  notes.txt
include/: csr.hh  vcsr.hh  vcsr_vcsr.hh  vcsr_vl_vstart.hh  vcsr_vlenb.hh  vcsr_vtype.hh  vcsr_vxrm.hh  vcsr_vxsat.hh  vdecoder.hh  vinstr.hh  vreg.hh
src/: main.cpp
utils/: decode_utils.hh
